name: tests
version: 0.0.1
build-type: Simple
cabal-version: >=1.10

library
  build-depends:
    HTTP,
    JuicyPixels,
    QuickCheck,
    array,
    base,
    bytestring,
    containers,
    generic-random,
    hspec,
    http-types,
    parallel,
    sqlite-simple,
    template-haskell,
    text,
    th-abstraction,
    transformers,
    wai,
    warp

  default-language: GHC2021
  default-extensions:
    BlockArguments
